red_hat_content/documentation/red_hat_ansible_automation_platform/2.7/install-con_using_custom_tls_certificates/aem-page/install-con_using_custom_tls_certificates.md
+++
path = "/documentation/en-us/red_hat_ansible_automation_platform/2.7/install-con_using_custom_tls_certificates"
title = "Configure custom TLS certificates - Red Hat Ansible Automation Platform 2.7"
template = "docs/aem-title.html"

[extra]
breadcrumbs = [["/", "Home"], ["/products", "Product Documentation"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.7", "Red Hat Ansible Automation Platform"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.7", "2.7"], ["/documentation/en-us/red_hat_ansible_automation_platform/2.7/install-con_aap_containerized_installation_intro/", "Install containerized Ansible Automation Platform"]]
category = "Install"
category_description = ""
document_kind = "documentation"
html = "data/docs_assets_aem/red_hat_ansible_automation_platform/2.7/install-con_using_custom_tls_certificates/aem-page/install-con_using_custom_tls_certificates.html"
last_crumb = "Configure custom TLS certificates"
modified = "2026-07-30T17:12:56.473Z"
multi_page_path = ""
name = "Configure custom TLS certificates"
oversized = "false"
page_slug = "install-con_using_custom_tls_certificates"
portal_content_subtype = "title"
product = "Red Hat Ansible Automation Platform"
product_slug = "red_hat_ansible_automation_platform"
product_version = "2.7"
reference_url = "https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.7/install-con_using_custom_tls_certificates"
solr_index = "true"
toc = "data/docs_assets_aem/red_hat_ansible_automation_platform/2.7/install-con_using_custom_tls_certificates/toc/toc.json"
type = "aem-page"
+++

# Configure custom TLS certificates

Red Hat Ansible Automation Platform uses X.509 certificate and key pairs to secure traffic. These certificates secure internal traffic between Ansible Automation Platform components and external traffic for public UI and API connections.

There are two primary ways to manage TLS certificates for your Ansible Automation Platform deployment:

1. Ansible Automation Platform generated certificates (this is the default)
2. User-provided certificates

## Ansible Automation Platform generated certificates

By default, the installation program creates a self-signed Certificate Authority (CA) and uses it to generate self-signed TLS certificates for all Ansible Automation Platform services.

The self-signed CA certificate and key are generated on one node under the `~/aap/tls/` directory and copied to the same location on all other nodes. This CA is valid for 10 years after the initial creation date.

Self-signed certificates are not part of any public chain of trust. The installation program creates a certificate truststore that includes the self-signed CA certificate under `~/aap/tls/extracted/` and bind-mounts that directory to each Ansible Automation Platform service container under `/etc/pki/ca-trust/extracted/`. This allows each Ansible Automation Platform component to validate the self-signed certificates of the other Ansible Automation Platform services. The CA certificate can also be added to the truststore of other systems or browsers as needed.

## User-provided certificates

Set specific variables in your inventory file to replace self-signed certificates with your own TLS certificates and keys. These must be generated by a public or organizational CA before beginning the installation.

## Use a custom CA to generate all TLS certificates

Use this method when you want Ansible Automation Platform to generate all of the certificates, but you want them signed by a custom CA rather than the default self-signed certificates.

### About this task

When you use `ca_tls_cert` and `ca_tls_key`, the installation program automatically creates TLS certificates for each Ansible Automation Platform service using your provided CA certificate. You do not need to define individual service certificate variables (such as `gateway_tls_cert`, `controller_tls_cert`, `hub_tls_cert`, or `automationmetrics_tls_cert`) because the installation program generates these certificates for you.

### Procedure

 To use a custom Certificate Authority (CA) to generate TLS certificates for all Ansible Automation Platform services, set the following variables in your inventory file:

```
ca_tls_cert=<path_to_ca_tls_certificate>
ca_tls_key=<path_to_ca_tls_key>
```

Where:

`ca_tls_cert`
is the path to your custom CA certificate file.

`ca_tls_key`
is the path to the key file for your custom CA certificate.

## Provide custom TLS certificates for each service

Use this method if your organization manages TLS certificates outside of Ansible Automation Platform and requires manual provisioning.

### Procedure

-
-  
  

```yaml
# Platform gateway
gateway_tls_cert=<path_to_tls_certificate>
gateway_tls_key=<path_to_tls_key>
gateway_pg_tls_cert=<path_to_tls_certificate>
gateway_pg_tls_key=<path_to_tls_key>
gateway_redis_tls_cert=<path_to_tls_certificate>
gateway_redis_tls_key=<path_to_tls_key>

    # Automation controller
controller_tls_cert=<path_to_tls_certificate>
controller_tls_key=<path_to_tls_key>
controller_pg_tls_cert=<path_to_tls_certificate>
controller_pg_tls_key=<path_to_tls_key>

    # Automation hub
hub_tls_cert=<path_to_tls_certificate>
hub_tls_key=<path_to_tls_key>
hub_pg_tls_cert=<path_to_tls_certificate>
hub_pg_tls_key=<path_to_tls_key>

    # Event-Driven Ansible
eda_tls_cert=<path_to_tls_certificate>
eda_tls_key=<path_to_tls_key>
eda_pg_tls_cert=<path_to_tls_certificate>
eda_pg_tls_key=<path_to_tls_key>

    # Metrics service
automationmetrics_tls_cert=<path_to_tls_certificate>
automationmetrics_tls_key=<path_to_tls_key>
automationmetrics_pg_tls_cert=<path_to_tls_certificate>
automationmetrics_pg_tls_key=<path_to_tls_key>

    # PostgreSQL
postgresql_tls_cert=<path_to_tls_certificate>
postgresql_tls_key=<path_to_tls_key>

    # Receptor
receptor_tls_cert=<path_to_tls_certificate>
receptor_tls_key=<path_to_tls_key>

    # Redis
redis_tls_cert=<path_to_tls_certificate>
redis_tls_key=<path_to_tls_key>
```

-  If all components share the same fully qualified domain name (FQDN), use the same certificate and key for each service:
  

```yaml
gateway_tls_cert=/home/user/certs/myhost.example.com.crt
gateway_tls_key=/home/user/certs/myhost.example.com.key
controller_tls_cert=/home/user/certs/myhost.example.com.crt
controller_tls_key=/home/user/certs/myhost.example.com.key
hub_tls_cert=/home/user/certs/myhost.example.com.crt
hub_tls_key=/home/user/certs/myhost.example.com.key
eda_tls_cert=/home/user/certs/myhost.example.com.crt
eda_tls_key=/home/user/certs/myhost.example.com.key
automationmetrics_tls_cert=/home/user/certs/myhost.example.com.crt
automationmetrics_tls_key=/home/user/certs/myhost.example.com.key
postgresql_tls_cert=/home/user/certs/myhost.example.com.crt
postgresql_tls_key=/home/user/certs/myhost.example.com.key
```

-  If components are deployed on separate hosts with different FQDNs, provide a unique certificate for each service:
  

```yaml
gateway_tls_cert=/home/user/certs/gateway.example.com.crt
gateway_tls_key=/home/user/certs/gateway.example.com.key
controller_tls_cert=/home/user/certs/controller.example.com.crt
controller_tls_key=/home/user/certs/controller.example.com.key
hub_tls_cert=/home/user/certs/hub.example.com.crt
hub_tls_key=/home/user/certs/hub.example.com.key
eda_tls_cert=/home/user/certs/eda.example.com.crt
eda_tls_key=/home/user/certs/eda.example.com.key
automationmetrics_tls_cert=/home/user/certs/metrics.example.com.crt
automationmetrics_tls_key=/home/user/certs/metrics.example.com.key
postgresql_tls_cert=/home/user/certs/postgresql.example.com.crt
postgresql_tls_key=/home/user/certs/postgresql.example.com.key
```

  Note:
  For enterprise topology with dedicated metrics service host, use metrics.example.com FQDN.

## Considerations for certificates provided per service

When providing custom TLS certificates for each individual service, consider the following:

- Each service has its own `_tls_cert` and `_tls_key` variables. You can provide unique certificates for each service, or use the same certificate across multiple services if they share a fully qualified domain name (FQDN). If you do not define a certificate for a service, the installation program generates a self-signed certificate for that service.
- For services deployed across many nodes (for example, when following the enterprise topology), the provided certificate for that service must include the FQDN of all associated nodes in its Subject Alternative Name (SAN) field.
- If an external-facing service (such as automation controller or platform gateway) is deployed behind a load balancer that performs SSL/TLS offloading, the service’s certificate must include the load balancer’s FQDN in its SAN field, in addition to the FQDNs of the individual service nodes.
- Metrics service requires TLS certificates for both the service itself (`automationmetrics_tls_cert`) and its database connection (`automationmetrics_pg_tls_cert`). In enterprise topology, metrics service runs on a dedicated host and requires a unique certificate with the metrics service host FQDN in the SAN field.

## Provide a custom CA certificate

To ensure proper authentication and trust for manually provided TLS certificates signed by a custom Certificate Authority (CA), specify the path to your single or combined CA certificate using the `custom_ca_cert` variable in your inventory file.

### About this task

When you manually provide TLS certificates for Ansible Automation Platform services (such as `gateway_tls_cert`, `controller_tls_cert`, `hub_tls_cert`, or `automationmetrics_tls_cert`), those certificates might be signed by a custom CA.

Use the `custom_ca_cert` variable to add your CA certificate to the system-level truststore on all Ansible Automation Platform hosts. This allows the hosts to trust external endpoints that present certificates signed by your organization's CA, such as LDAP servers, Git repositories, and container registries.

The `custom_ca_cert` certificate is added to `mesh-CA.crt` only when `receptor_tls_cert` is also provided. In that scenario, the CA in `custom_ca_cert` must be the CA that signed the custom receptor certificates so that the receptor mesh can validate them. When `receptor_tls_cert` is not set, `custom_ca_cert` is not included in `mesh-CA.crt` and does not affect receptor mesh trust.

### Procedure

 If any of the TLS certificates you manually provided are signed by a custom CA, specify the CA certificate by using the following variable in your inventory file:

`custom_ca_cert=<path_to_custom_ca_certificate>`

If you have more than one CA certificate, combine them into a single file and reference the combined certificate with the `custom_ca_cert` variable.

Important:

The receptor mesh has a practical size limit on the CA trust bundle in `mesh-CA.crt`. If you provide `receptor_tls_cert` and the `custom_ca_cert` file contains a large enterprise CA bundle with many intermediate or cross-signed certificates, receptor can fail with `crypto buffer exceeded` errors. When providing custom receptor certificates, use a `custom_ca_cert` file that contains only the CA certificate that signed the receptor certificates. Large CA bundles are safe to use with `custom_ca_cert` when `receptor_tls_cert` is not set, because in that case the bundle is used only for system trust and is not added to `mesh-CA.crt`.

## Receptor certificate considerations

To ensure successful TLS hostname validation and compatibility for Receptor nodes using custom certificates, specify the host FQDN and the required `otherName` OID in the *Subject Alternative Name* (SAN), as wildcard certificates are unsupported.

When using a custom certificate for Receptor nodes, the certificate requires the `otherName` field specified in the Subject Alternative Name (SAN) of the certificate with the value `1.3.6.1.4.1.2312.19.1`.

Receptor does not support the usage of wildcard certificates. Additionally, each Receptor certificate must have the host FQDN specified in its SAN for TLS hostname validation to be correctly performed.

**Preflight validation for custom receptor certificates**

When `receptor_tls_cert` is provided without `ca_tls_cert`, the installation program validates that `custom_ca_cert` is also set. If `custom_ca_cert` is not defined, the installation fails with the following error:

```
When receptor_tls_cert is provided without ca_tls_cert, custom_ca_cert must also be set to the CA certificate that signed the receptor certificates.
```

This validation ensures that the CA that signed the custom receptor certificates is available in `mesh-CA.crt` for receptor mesh trust. To resolve this error, set `custom_ca_cert` to the path of the CA certificate that signed your receptor certificates.

## Understand the receptor mesh CA trust bundle

The receptor mesh uses a CA trust bundle stored in `mesh-CA.crt` to validate TLS connections between mesh nodes. The contents of `mesh-CA.crt` depend on which certificate variables you set in your inventory file.

The following table describes the three scenarios that determine the contents of `mesh-CA.crt`.

| **Variables set**                     | **mesh-CA.crt contains**   | **Approach** |
| ------------------------------------- | -------------------------- | ------------ |
| None (default)                        | Installer self-signed CA   | Default      |
| `ca_tls_cert` +`ca_tls_key`           | Your enterprise CA         | Recommended  |
| `receptor_tls_cert` +`custom_ca_cert` | Your custom CA certificate | Advanced     |

**Default: No custom certificates**

When you do not set `ca_tls_cert`, `ca_tls_key`, `receptor_tls_cert`, or `custom_ca_cert`, the installation program generates its own self-signed CA and uses it to sign receptor node certificates. The self-signed CA is placed in `mesh-CA.crt`.

**Provide an enterprise CA and key**

When you set `ca_tls_cert` and `ca_tls_key`, the installer uses your CA and key to sign receptor node certificates instead of generating its own. Your CA certificate is placed in `mesh-CA.crt` and becomes the mesh CA for receptor communication.

If you also set `custom_ca_cert`, that certificate is used only for system-level trust (`update-ca-trust`) and is not added to `mesh-CA.crt`.

This is the recommended approach for organizations that want to use their own CA for receptor mesh certificates. Create an Ansible Automation Platform-specific child or intermediate CA and key from your organization's root CA. This lets the installer generate properly formatted receptor node certificates with the required receptor OID while keeping the mesh CA small and purpose-built.

**Provide pre-signed receptor certificates**

When you set `receptor_tls_cert` and `receptor_tls_key` without `ca_tls_cert`, you provide your own receptor certificates that were signed externally. You must also set `custom_ca_cert` to the CA certificate that signed the receptor certificates. The installation program imports the receptor certificates directly and does not generate or sign them.

In this scenario, the CA certificate from `custom_ca_cert` is placed in `mesh-CA.crt` so that receptor nodes can validate each other's certificates.

This approach gives you full control over certificate issuance. You must generate receptor node certificates that include the required receptor OID (`1.3.6.1.4.1.2312.19.1`) in the Subject Alternative Name (SAN) `otherName` field and the host FQDN in the SAN. Wildcard certificates are not supported for receptor.

**Recommended approaches for custom receptor certificates**

If your organization requires custom certificates for receptor mesh communication, there are two approaches. Choose the approach that matches your certificate management requirements.

**Use ca_tls_cert and ca_tls_key**

Create an Ansible Automation Platform-specific child or intermediate CA and key from your organization's root CA. Set `ca_tls_cert` and `ca_tls_key` in your inventory file to point to this CA and key.

The installation program uses your CA to generate properly formatted receptor node certificates with the required receptor OID. This approach keeps the mesh CA small and purpose-built and does not require you to manage individual receptor node certificates.

`ca_tls_cert=/home/user/certs/aap-intermediate-ca.crt`

`ca_tls_key=/home/user/certs/aap-intermediate-ca.key`

If your Ansible Automation Platform hosts also need to trust external endpoints signed by a different CA, set `custom_ca_cert` separately. That certificate is used only for system trust and does not affect `mesh-CA.crt`.

**Use receptor_tls_cert and receptor_tls_key**

Generate your own receptor node certificates and provide them with `receptor_tls_cert` and `receptor_tls_key`. You must also set `custom_ca_cert` to the CA certificate that signed the receptor certificates.

`receptor_tls_cert=/home/user/certs/receptor.example.com.crt`

`receptor_tls_key=/home/user/certs/receptor.example.com.key`

`custom_ca_cert=/home/user/certs/signing-ca.crt`

This approach requires you to manage certificate issuance for each receptor node, including the following requirements:

- Each certificate must include the `otherName` field in the *Subject Alternative Name* (SAN) with the value `1.3.6.1.4.1.2312.19.1`.
- Each certificate must include the host FQDN in the SAN
- Wildcard certificates are not supported.
- The `custom_ca_cert` file should contain only the CA certificate that signed the receptor certificates. Avoid using large enterprise CA bundles, which can cause `crypto buffer exceeded` errors when the `mesh-CA.crt` bundle exceeds the QUIC 16 KB buffer limit.

## Redis certificate considerations

When using custom TLS certificates for Redis-related services, consider the following for mutual TLS (mTLS) communication if specifying Extended Key Usage (EKU):

- The Redis server certificate (`redis_tls_cert`) should include the `serverAuth` (web server authentication) and `clientAuth` (client authentication) EKU.
- The Redis client certificate (`gateway_redis_tls_cert`) should include the `clientAuth` (client authentication) EKU.

## Use custom Receptor signing keys

Receptor signing is enabled by default unless `receptor_disable_signing=true` is set, and an RSA key pair (public and private) is generated by the installation program. However, you can set custom RSA public and private keys by using the following variables:

```
receptor_signing_private_key=<full_path_to_private_key>
receptor_signing_public_key=<full_path_to_public_key>
```
